feat: changed nouns to plural
